student controller dashboard completed and services integration fixed in StudentService.java